--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="fundo006.css">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
 </head>
 
 <body>
@@ -55,7 +55,7 @@
             consectetur! Vitae esse atque distinctio, rem corporis numquam quasi cum possimus enim soluta asperiores?
             Reprehenderit, velit omnis?
         </p>
-        
+
     </main>
 </body>
 
